Update admin password input placeholder
Removed default password hint from admin password input.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <section id="admin" class="card" style="display:none">
     <h3>Admin Paneli</h3>
     <div class="actions" style="margin:8px 0">
-      <input id="adminPass" placeholder="Admin şifresi (varsayılan: ahmet-admin-2025)" style="max-width:320px">
+      <input id="adminPass" placeholder="Admin şifresi" style="max-width:320px">
       <button class="btn" id="adminLogin" type="button">Giriş</button>
       <button class="btn" id="enableNotif" type="button">Bildirimleri Aç</button>
       <span id="adminStatus" class="small"></span>
