--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Randevu Sistemi</title>
+<title>AHMET TEKELİ</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root{--bg:#f6f7fb;--ink:#0f172a;--muted:#6b7280;--line:#e5e7eb;--card:#fff;--gold:#d4af37}
