--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ thead th{background:#f3f4f6;font-weight:700}
 <main class="wrap">
   <!-- Logo yalnız ortada -->
   <section class="hero">
-    <img id="centerLogo" alt="Logo">
+    <img id="main.png" alt="Logo">
     <h1>AHMET TEKELİ ERKEK KUAFÖRÜ</h1>
   </section>
 
