--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ html,body{margin:0;background:var(--bg);color:var(--ink);font:15px/1.55 "Inter",
 .wrap{max-width:1100px;margin:0 auto;padding:0 14px}
 
 /* Header */
-header{position:sticky;top:0;background:rgba(15,18,23,.75);backdrop-filter:blur(20px);border-bottom:1px solid var(--line);z-index:30;box-shadow:0 2px 12px rgba(0,0,0,.25)}
+header{position:sticky;top:0;background:rgba;backdrop-filter:blur(20px);border-bottom:1px solid var(--line);z-index:30;box-shadow:0 2px 12px rgba(0,0,0,.25)}
 .header-row{
   display:grid;
   grid-template-columns:1fr auto 1fr;
