--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@ html,body{margin:0;background:var(--bg);color:var(--ink);font:15px/1.55 "Inter",
 .wrap{max-width:1100px;margin:0 auto;padding:0 14px}
 
 /* Header */
-header{position:sticky;top:0;background:rgba;backdrop-filter:blur(20px);border-bottom:1px solid var(--line);z-index:30;box-shadow:0 2px 12px rgba(0,0,0,.25)}
-.header-row{
+header{
+  position:sticky;
+  top:0;
+  background:transparent; /* tamamen şeffaf */
+  backdrop-filter:none;   /* blur kalktı */
+  border-bottom:none;     /* çizgi kalktı */
+  box-shadow:none;        /* gölge kalktı */
+  z-index:30;
+}
+
   display:grid;
   grid-template-columns:1fr auto 1fr;
   align-items:center;
